--- a/nba.html
+++ b/nba.html
@@ -119,139 +119,139 @@
    <div class="mt-5">
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
      Upcoming NBA Events
-   </h2>
-   <table id="eventsTable">
-    <thead>
-     <tr>
-      <th>
-       Event
-      </th>
-      <th>
-       Start Time
-      </th>
-      <th>
-       Countdown
-      </th>
-     </tr>
-    </thead>
-    <tbody>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-1">
-        Houston Rockets vs Milwaukee Bucks
-       </a>
-      </td>
-      <td>
-       November 09, 2025 12:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 12:30 PM:00" data-start="November 09, 2025 12:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-2">
-        Brooklyn Nets vs New York Knicks
-       </a>
-      </td>
-      <td>
-       November 09, 2025 3:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 3:00 PM:00" data-start="November 09, 2025 3:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-3">
-        Boston Celtics vs Orlando Magic
-       </a>
-      </td>
-      <td>
-       November 09, 2025 3:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 3:00 PM:00" data-start="November 09, 2025 3:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-4">
-        Oklahoma City Thunder vs Memphis Grizzlies
-       </a>
-      </td>
-      <td>
-       November 09, 2025 3:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 3:00 PM:00" data-start="November 09, 2025 3:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-5">
-        Detroit Pistons vs Philadelphia 76ers
-       </a>
-      </td>
-      <td>
-       November 09, 2025 4:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 4:30 PM:00" data-start="November 09, 2025 4:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-6">
-        Indiana Pacers vs Golden State Warriors
-       </a>
-      </td>
-      <td>
-       November 09, 2025 5:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 5:30 PM:00" data-start="November 09, 2025 5:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-7">
-        Minnesota Timberwolves vs Sacramento Kings
-       </a>
-      </td>
-      <td>
-       November 09, 2025 6:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 6:00 PM:00" data-start="November 09, 2025 6:00 PM:00">
-       </span>
-      </td>
-     </tr>
-    </tbody>
-   </table>
-  </div>
-  <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-   <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-    <li class="nav-item">
-     <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-      Stream Request (Discord)
-     </a>
-    </li>
-   </ul>
-   <p class="mb-0 text-body-secondary text-center text-lg-start">
-    Roxiestreams © 2024
-   </p>
-  </footer>
-  <script src="js/bootstrap.bundle.min.js">
-  </script>
-  <script>
-   function startCountdown() {
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Houston Rockets vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        November 09, 2025 12:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 12:30 PM:00" data-start="November 09, 2025 12:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Brooklyn Nets vs New York Knicks
+        </a>
+       </td>
+       <td>
+        November 09, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 3:00 PM:00" data-start="November 09, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Boston Celtics vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        November 09, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 3:00 PM:00" data-start="November 09, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Oklahoma City Thunder vs Memphis Grizzlies
+        </a>
+       </td>
+       <td>
+        November 09, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 3:00 PM:00" data-start="November 09, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Detroit Pistons vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        November 09, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 4:30 PM:00" data-start="November 09, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Indiana Pacers vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        November 09, 2025 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 5:30 PM:00" data-start="November 09, 2025 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Minnesota Timberwolves vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        November 09, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 6:00 PM:00" data-start="November 09, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+   </div>
+   <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+    <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+     <li class="nav-item">
+      <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
+       Stream Request (Discord)
+      </a>
+     </li>
+    </ul>
+    <p class="mb-0 text-body-secondary text-center text-lg-start">
+     Roxiestreams © 2024
+    </p>
+   </footer>
+   <script src="js/bootstrap.bundle.min.js">
+   </script>
+   <script>
+    function startCountdown() {
              var countdownElements = document.querySelectorAll('.countdown-timer');
  
              countdownElements.forEach(function(element) {
@@ -280,6 +280,153 @@
          }
  
          window.onload = startCountdown;
-  </script>
+   </script>
+   <h2>
+    NBA Schedule for November 10, 2025
+   </h2>
+   <table id="eventsTable">
+    <thead>
+     <tr>
+      <th>
+       Event
+      </th>
+      <th>
+       Start Time
+      </th>
+      <th>
+       Countdown
+      </th>
+     </tr>
+    </thead>
+    <tbody>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-1">
+        Los Angeles Lakers vs Charlotte Hornets
+       </a>
+      </td>
+      <td>
+       November 10, 2025 4:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 11, 2025 4:00 PM:00" data-start="November 10, 2025 4:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-2">
+        Washington Wizards vs Detroit Pistons
+       </a>
+      </td>
+      <td>
+       November 10, 2025 4:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 11, 2025 4:00 PM:00" data-start="November 10, 2025 4:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-3">
+        Portland Trail Blazers vs Orlando Magic
+       </a>
+      </td>
+      <td>
+       November 10, 2025 4:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 11, 2025 4:00 PM:00" data-start="November 10, 2025 4:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-4">
+        Cleveland Cavaliers vs Miami Heat
+       </a>
+      </td>
+      <td>
+       November 10, 2025 4:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 11, 2025 4:30 PM:00" data-start="November 10, 2025 4:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-5">
+        San Antonio Spurs vs Chicago Bulls
+       </a>
+      </td>
+      <td>
+       November 10, 2025 5:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 11, 2025 5:00 PM:00" data-start="November 10, 2025 5:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-6">
+        Milwaukee Bucks vs Dallas Mavericks
+       </a>
+      </td>
+      <td>
+       November 10, 2025 5:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 11, 2025 5:30 PM:00" data-start="November 10, 2025 5:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-7">
+        New Orleans Pelicans vs Phoenix Suns
+       </a>
+      </td>
+      <td>
+       November 10, 2025 6:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 11, 2025 6:00 PM:00" data-start="November 10, 2025 6:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-8">
+        Minnesota Timberwolves vs Utah Jazz
+       </a>
+      </td>
+      <td>
+       November 10, 2025 6:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 11, 2025 6:00 PM:00" data-start="November 10, 2025 6:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-9">
+        Atlanta Hawks vs Los Angeles Clippers
+       </a>
+      </td>
+      <td>
+       November 10, 2025 7:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 11, 2025 7:30 PM:00" data-start="November 10, 2025 7:30 PM:00">
+       </span>
+      </td>
+     </tr>
+    </tbody>
+   </table>
+  </div>
  </body>
 </html>
