--- a/nfl.html
+++ b/nfl.html
@@ -119,223 +119,223 @@
    <div class="mt-5">
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
      Upcoming NFL Events
-   </h2>
-   <table id="eventsTable">
-    <thead>
-     <tr>
-      <th>
-       Event
-      </th>
-      <th>
-       Start Time
-      </th>
-      <th>
-       Countdown
-      </th>
-     </tr>
-    </thead>
-    <tbody>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-1">
-        Atlanta Falcons vs Indianapolis Colts
-       </a>
-      </td>
-      <td>
-       November 09, 2025 6:30 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 6:30 AM:00" data-start="November 09, 2025 6:30 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/redzone">
-        NFL Redzone
-       </a>
-      </td>
-      <td>
-       November 09, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 6:30 AM:00" data-start="November 09, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-2">
-        New York Giants vs Chicago Bears
-       </a>
-      </td>
-      <td>
-       November 09, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 10:00 AM:00" data-start="November 09, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-3">
-        Buffalo Bills vs Miami Dolphins
-       </a>
-      </td>
-      <td>
-       November 09, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 10:00 AM:00" data-start="November 09, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-4">
-        Baltimore Ravens vs Minnesota Vikings
-       </a>
-      </td>
-      <td>
-       November 09, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 10:00 AM:00" data-start="November 09, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-5">
-        Cleveland Browns vs New York
-       </a>
-      </td>
-      <td>
-       November 09, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 10:00 AM:00" data-start="November 09, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-6">
-        New England Patriots vs Tampa Bay Buccaneers
-       </a>
-      </td>
-      <td>
-       November 09, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 10:00 AM:00" data-start="November 09, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-7">
-        New Orleans Saints vs Carolina Panthers
-       </a>
-      </td>
-      <td>
-       November 09, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 10:00 AM:00" data-start="November 09, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-8">
-        Jacksonville Jaguars vs Houston Texans
-       </a>
-      </td>
-      <td>
-       November 09, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 10:00 AM:00" data-start="November 09, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-9">
-        Arizona Cardinals vs Seattle Seahawks
-       </a>
-      </td>
-      <td>
-       November 09, 2025 1:05 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 1:05 PM:00" data-start="November 09, 2025 1:05 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-10">
-        Los Angeles Rams vs San Francisco 49ers
-       </a>
-      </td>
-      <td>
-       November 09, 2025 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 1:25 PM:00" data-start="November 09, 2025 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-11">
-        Detroit Lions vs Washington Commanders
-       </a>
-      </td>
-      <td>
-       November 09, 2025 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 1:25 PM:00" data-start="November 09, 2025 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-12">
-        Pittsburgh Steelers vs Los Angeles Rams
-       </a>
-      </td>
-      <td>
-       November 09, 2025 5:20 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 10, 2025 5:20 PM:00" data-start="November 09, 2025 5:20 PM:00">
-       </span>
-      </td>
-     </tr>
-    </tbody>
-   </table>
-  </div>
-  <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-   <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-    <li class="nav-item">
-     <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-      Stream Request (Discord)
-     </a>
-    </li>
-   </ul>
-   <p class="mb-0 text-body-secondary text-center text-lg-start">
-    Roxiestreams © 2024
-   </p>
-  </footer>
-  <script src="js/bootstrap.bundle.min.js">
-  </script>
-  <script>
-   function startCountdown() {
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-1">
+         Atlanta Falcons vs Indianapolis Colts
+        </a>
+       </td>
+       <td>
+        November 09, 2025 6:30 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 6:30 AM:00" data-start="November 09, 2025 6:30 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/redzone">
+         NFL Redzone
+        </a>
+       </td>
+       <td>
+        November 09, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 6:30 AM:00" data-start="November 09, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-2">
+         New York Giants vs Chicago Bears
+        </a>
+       </td>
+       <td>
+        November 09, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 10:00 AM:00" data-start="November 09, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-3">
+         Buffalo Bills vs Miami Dolphins
+        </a>
+       </td>
+       <td>
+        November 09, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 10:00 AM:00" data-start="November 09, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-4">
+         Baltimore Ravens vs Minnesota Vikings
+        </a>
+       </td>
+       <td>
+        November 09, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 10:00 AM:00" data-start="November 09, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-5">
+         Cleveland Browns vs New York
+        </a>
+       </td>
+       <td>
+        November 09, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 10:00 AM:00" data-start="November 09, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-6">
+         New England Patriots vs Tampa Bay Buccaneers
+        </a>
+       </td>
+       <td>
+        November 09, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 10:00 AM:00" data-start="November 09, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-7">
+         New Orleans Saints vs Carolina Panthers
+        </a>
+       </td>
+       <td>
+        November 09, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 10:00 AM:00" data-start="November 09, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-8">
+         Jacksonville Jaguars vs Houston Texans
+        </a>
+       </td>
+       <td>
+        November 09, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 10:00 AM:00" data-start="November 09, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-9">
+         Arizona Cardinals vs Seattle Seahawks
+        </a>
+       </td>
+       <td>
+        November 09, 2025 1:05 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 1:05 PM:00" data-start="November 09, 2025 1:05 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-10">
+         Los Angeles Rams vs San Francisco 49ers
+        </a>
+       </td>
+       <td>
+        November 09, 2025 1:25 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 1:25 PM:00" data-start="November 09, 2025 1:25 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-11">
+         Detroit Lions vs Washington Commanders
+        </a>
+       </td>
+       <td>
+        November 09, 2025 1:25 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 1:25 PM:00" data-start="November 09, 2025 1:25 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-12">
+         Pittsburgh Steelers vs Los Angeles Rams
+        </a>
+       </td>
+       <td>
+        November 09, 2025 5:20 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 5:20 PM:00" data-start="November 09, 2025 5:20 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+   </div>
+   <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+    <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+     <li class="nav-item">
+      <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
+       Stream Request (Discord)
+      </a>
+     </li>
+    </ul>
+    <p class="mb-0 text-body-secondary text-center text-lg-start">
+     Roxiestreams © 2024
+    </p>
+   </footer>
+   <script src="js/bootstrap.bundle.min.js">
+   </script>
+   <script>
+    function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -364,6 +364,41 @@
         }
 
         window.onload = startCountdown;
-  </script>
+   </script>
+   <h2>
+    NFL Schedule for Monday, November 10, 2025
+   </h2>
+   <table id="eventsTable">
+    <thead>
+     <tr>
+      <th>
+       Event
+      </th>
+      <th>
+       Start Time
+      </th>
+      <th>
+       Countdown
+      </th>
+     </tr>
+    </thead>
+    <tbody>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-1">
+        Philadelphia Eagles vs Green Bay Packers
+       </a>
+      </td>
+      <td>
+       November 10, 2025 5:15 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 11, 2025 5:15 PM:00" data-start="November 10, 2025 5:15 PM:00">
+       </span>
+      </td>
+     </tr>
+    </tbody>
+   </table>
+  </div>
  </body>
 </html>
