--- a/soccer.html
+++ b/soccer.html
@@ -95,113 +95,13 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Athletic Club vs Real Oviedo</a>
-<td>November 09, 2025 05:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Russia vs Peru</a>
+<td>November 12, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="November 10, 2025 04:00:00" data-start="November 09, 2025 05:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Lorient vs Toulouse</a>
-<td>November 09, 2025 06:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Atlético Mineiro vs Fortaleza</a>
+<td>November 12, 2025 15:30 PM</td>
 <td><span class="countdown-timer" data-end="November 10, 2025 05:00:00" data-start="November 09, 2025 06:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Bologna vs Napoli</a>
-<td>November 09, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 05:00:00" data-start="November 09, 2025 06:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Kocaelispor vs Galatasaray</a>
-<td>November 09, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 05:00:00" data-start="November 09, 2025 06:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Aston Villa vs Bournemouth</a>
-<td>November 09, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 05:00:00" data-start="November 09, 2025 06:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Brentford vs Newcastle</a>
-<td>November 09, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 05:00:00" data-start="November 09, 2025 06:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Crystal Palace vs Brighton</a>
-<td>November 09, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 05:00:00" data-start="November 09, 2025 06:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Nottingham Forest vs Leeds</a>
-<td>November 09, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 05:00:00" data-start="November 09, 2025 06:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Dundee vs Rangers</a>
-<td>November 09, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 06:00:00" data-start="November 09, 2025 07:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Rayo Vallecano vs Real Madrid</a>
-<td>November 09, 2025 07:15 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 06:15:00" data-start="November 09, 2025 07:15:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Metz vs Nice</a>
-<td>November 09, 2025 08:15 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 07:15:00" data-start="November 09, 2025 08:15:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Strasbourg vs Lille</a>
-<td>November 09, 2025 08:15 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 07:15:00" data-start="November 09, 2025 08:15:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Manchester City vs Liverpool</a>
-<td>November 09, 2025 08:30 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 07:30:00" data-start="November 09, 2025 08:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Roma vs Udinese</a>
-<td>November 09, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 08:00:00" data-start="November 09, 2025 09:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Mallorca vs Getafe</a>
-<td>November 09, 2025 09:30 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 08:30:00" data-start="November 09, 2025 09:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Corinthians vs Ceará</a>
-<td>November 09, 2025 11:00 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 10:00:00" data-start="November 09, 2025 11:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-21">Cruzeiro vs Fluminense</a>
-<td>November 09, 2025 11:00 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 10:00:00" data-start="November 09, 2025 11:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">Vitória vs Botafogo</a>
-<td>November 09, 2025 11:00 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 10:00:00" data-start="November 09, 2025 11:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-14">Boca Juniors vs River Plate</a>
-<td>November 09, 2025 11:30 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 10:30:00" data-start="November 09, 2025 11:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-15">Inter Milan vs Lazio</a>
-<td>November 09, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 10:45:00" data-start="November 09, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Lyon vs PSG</a>
-<td>November 09, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 10:45:00" data-start="November 09, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Celta Vigo vs Barcelona</a>
-<td>November 09, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 11:00:00" data-start="November 09, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-16">Flamengo vs Santos</a>
-<td>November 09, 2025 13:30 PM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 12:30:00" data-start="November 09, 2025 13:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-17">Santos Laguna vs Pachuca</a>
-<td>November 09, 2025 15:30 PM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 14:30:00" data-start="November 09, 2025 15:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-18">Fortaleza vs Grêmio</a>
-<td>November 09, 2025 15:30 PM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 14:30:00" data-start="November 09, 2025 15:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-19">Mirassol vs Palmeiras</a>
-<td>November 09, 2025 15:30 PM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 16:00:00" data-start="November 09, 2025 15:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-20">San Diego vs Portland Timbers</a>
-<td>November 09, 2025 18:00 PM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 17:00:00" data-start="November 09, 2025 18:00:00"></span></td>
 <tr>
 </tbody></table>
 </div>
