--- a/fighting.html
+++ b/fighting.html
@@ -96,12 +96,22 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/ufc">UFC Vegas 111: Bonfim vs Brown</a></td>
-<td>November 08, 2025 13:00 PM</td>
-<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 08, 2025 13:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-straems">WWE RAW</a></td>
+<td>November 10, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 10, 2025 17:00:00"></span></td>
 </tr>
-<tr>
-<td>
+<td><a href="https://roxiestreams.live/wwe-straems">WWE NXT</a></td>
+<td>November 11, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 11, 2025 17:00:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/aew">AEW</a></td>
+<td>November 12, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 12, 2025 17:00:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/wwe-straems">WWE Smackdown</a></td>
+<td>November 14, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 14, 2025 17:00:00"></span></td>
+</tr>
 </tbody>
 </table>
 </div>
