--- a/soccer.html
+++ b/soccer.html
@@ -97,13 +97,13 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Russia vs Peru</a>
 <td>November 12, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 04:00:00" data-start="November 09, 2025 05:00:00"></span></td>
+<td><span class="countdown-timer" data-end="November 13, 2025 08:00:00" data-start="November 12, 2025 09:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Atlético Mineiro vs Fortaleza</a>
 <td>November 12, 2025 15:30 PM</td>
-<td><span class="countdown-timer" data-end="November 10, 2025 05:00:00" data-start="November 09, 2025 06:00:00"></span></td>
+<td><span class="countdown-timer" data-end="November 13, 2025 14:30:00" data-start="November 12, 2025 15:30:00"></span></td>
 <tr>
-</tbody></table>
+</tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
