--- a/motorsports.html
+++ b/motorsports.html
@@ -96,14 +96,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/motogp">MotoGP - Grand Prix of Portugal</a></td>
-<td>November 09, 2025 05:00 AM</td>
-<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 09, 2025 05:00:00"></span>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Sao Paulo Grand Prix</a></td>
-<td>November 09, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 09, 2025 09:00:00"></span>
+<td><a href="https://roxiestreams.live/wec">Supercars Championship - Race</a></td>
+<td>November 14, 2025 20:10 PM</td>
+<td><span class="countdown-timer" data-end="November 30, 2025 23:00:00" data-start="November 14, 2025 20:10:00"></span>
 </tr>
 <tr>
 </tr></tbody>
