--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
                     <td><span class="countdown-timer" data-start="November 10, 2025 17:00:00 PST"></span></td>
                 </tr>
                 <tr>
+                    <td><a href="https://roxiestreams.live/nfl-streams-1">NFL</a></td>
+                    <td>November 10, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 10, 2025 17:00:00 PST"></span></td>
+                </tr>
+                <tr>
             </tbody>
         </table>
     </div>
