--- a/nba.html
+++ b/nba.html
@@ -135,134 +135,134 @@
       </tr>
      </thead>
      <tbody>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-1">
-        Los Angeles Lakers vs Charlotte Hornets
-       </a>
-      </td>
-      <td>
-       November 10, 2025 4:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 11, 2025 4:00 PM:00" data-start="November 10, 2025 4:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-2">
-        Washington Wizards vs Detroit Pistons
-       </a>
-      </td>
-      <td>
-       November 10, 2025 4:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 11, 2025 4:00 PM:00" data-start="November 10, 2025 4:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-3">
-        Portland Trail Blazers vs Orlando Magic
-       </a>
-      </td>
-      <td>
-       November 10, 2025 4:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 11, 2025 4:00 PM:00" data-start="November 10, 2025 4:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-4">
-        Cleveland Cavaliers vs Miami Heat
-       </a>
-      </td>
-      <td>
-       November 10, 2025 4:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 11, 2025 4:30 PM:00" data-start="November 10, 2025 4:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-5">
-        San Antonio Spurs vs Chicago Bulls
-       </a>
-      </td>
-      <td>
-       November 10, 2025 5:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 11, 2025 5:00 PM:00" data-start="November 10, 2025 5:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-6">
-        Milwaukee Bucks vs Dallas Mavericks
-       </a>
-      </td>
-      <td>
-       November 10, 2025 5:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 11, 2025 5:30 PM:00" data-start="November 10, 2025 5:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-7">
-        New Orleans Pelicans vs Phoenix Suns
-       </a>
-      </td>
-      <td>
-       November 10, 2025 6:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 11, 2025 6:00 PM:00" data-start="November 10, 2025 6:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-8">
-        Minnesota Timberwolves vs Utah Jazz
-       </a>
-      </td>
-      <td>
-       November 10, 2025 6:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 11, 2025 6:00 PM:00" data-start="November 10, 2025 6:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-9">
-        Atlanta Hawks vs Los Angeles Clippers
-       </a>
-      </td>
-      <td>
-       November 10, 2025 7:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 11, 2025 7:30 PM:00" data-start="November 10, 2025 7:30 PM:00">
-       </span>
-      </td>
-     </tr>
-    </tbody>
-   </table>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Los Angeles Lakers vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        November 10, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 11, 2025 4:00 PM:00" data-start="November 10, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Washington Wizards vs Detroit Pistons
+        </a>
+       </td>
+       <td>
+        November 10, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 11, 2025 4:00 PM:00" data-start="November 10, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Portland Trail Blazers vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        November 10, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 11, 2025 4:00 PM:00" data-start="November 10, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Cleveland Cavaliers vs Miami Heat
+        </a>
+       </td>
+       <td>
+        November 10, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 11, 2025 4:30 PM:00" data-start="November 10, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         San Antonio Spurs vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        November 10, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 11, 2025 5:00 PM:00" data-start="November 10, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Milwaukee Bucks vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        November 10, 2025 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 11, 2025 5:30 PM:00" data-start="November 10, 2025 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         New Orleans Pelicans vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        November 10, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 11, 2025 6:00 PM:00" data-start="November 10, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Minnesota Timberwolves vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        November 10, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 11, 2025 6:00 PM:00" data-start="November 10, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Atlanta Hawks vs Los Angeles Clippers
+        </a>
+       </td>
+       <td>
+        November 10, 2025 7:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 11, 2025 7:30 PM:00" data-start="November 10, 2025 7:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
    </div>
    <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
     <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
@@ -309,6 +309,110 @@
  
          window.onload = startCountdown;
    </script>
+   <h2>
+    NBA Schedule for November 11, 2025
+   </h2>
+   <table id="eventsTable">
+    <thead>
+     <tr>
+      <th>
+       Event
+      </th>
+      <th>
+       Start Time
+      </th>
+      <th>
+       Countdown
+      </th>
+     </tr>
+    </thead>
+    <tbody>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-1">
+        Toronto Raptors vs Brooklyn Nets
+       </a>
+      </td>
+      <td>
+       November 11, 2025 4:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 12, 2025 4:30 PM:00" data-start="November 11, 2025 4:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-2">
+        Memphis Grizzlies vs New York Knicks
+       </a>
+      </td>
+      <td>
+       November 11, 2025 4:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 12, 2025 4:30 PM:00" data-start="November 11, 2025 4:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-3">
+        Boston Celtics vs Philadelphia 76ers
+       </a>
+      </td>
+      <td>
+       November 11, 2025 5:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 12, 2025 5:00 PM:00" data-start="November 11, 2025 5:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-4">
+        Golden State Warriors vs Oklahoma City Thunder
+       </a>
+      </td>
+      <td>
+       November 11, 2025 5:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 12, 2025 5:00 PM:00" data-start="November 11, 2025 5:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-5">
+        Indiana Pacers vs Utah Jazz
+       </a>
+      </td>
+      <td>
+       November 11, 2025 6:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 12, 2025 6:00 PM:00" data-start="November 11, 2025 6:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-6">
+        Denver Nuggets vs Sacramento Kings
+       </a>
+      </td>
+      <td>
+       November 11, 2025 8:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 12, 2025 8:00 PM:00" data-start="November 11, 2025 8:00 PM:00">
+       </span>
+      </td>
+     </tr>
+    </tbody>
+   </table>
   </div>
  </body>
 </html>
