--- a/nba.html
+++ b/nba.html
@@ -135,101 +135,108 @@
       </tr>
      </thead>
      <tbody>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-1">
-        Toronto Raptors vs Brooklyn Nets
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Toronto Raptors vs Brooklyn Nets
+        </a>
+       </td>
+       <td>
+        November 11, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 12, 2025 4:30 PM:00" data-start="November 11, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Memphis Grizzlies vs New York Knicks
+        </a>
+       </td>
+       <td>
+        November 11, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 12, 2025 4:30 PM:00" data-start="November 11, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Boston Celtics vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        November 11, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 12, 2025 5:00 PM:00" data-start="November 11, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Golden State Warriors vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        November 11, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 12, 2025 5:00 PM:00" data-start="November 11, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Indiana Pacers vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        November 11, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 12, 2025 6:00 PM:00" data-start="November 11, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Denver Nuggets vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        November 11, 2025 8:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 12, 2025 8:00 PM:00" data-start="November 11, 2025 8:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+    <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+     <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+      <li class="nav-item">
+       <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
+        Stream Request (Discord)
        </a>
-      </td>
-      <td>
-       November 11, 2025 4:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 12, 2025 4:30 PM:00" data-start="November 11, 2025 4:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-2">
-        Memphis Grizzlies vs New York Knicks
-       </a>
-      </td>
-      <td>
-       November 11, 2025 4:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 12, 2025 4:30 PM:00" data-start="November 11, 2025 4:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-3">
-        Boston Celtics vs Philadelphia 76ers
-       </a>
-      </td>
-      <td>
-       November 11, 2025 5:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 12, 2025 5:00 PM:00" data-start="November 11, 2025 5:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-4">
-        Golden State Warriors vs Oklahoma City Thunder
-       </a>
-      </td>
-      <td>
-       November 11, 2025 5:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 12, 2025 5:00 PM:00" data-start="November 11, 2025 5:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-5">
-        Indiana Pacers vs Utah Jazz
-       </a>
-      </td>
-      <td>
-       November 11, 2025 6:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 12, 2025 6:00 PM:00" data-start="November 11, 2025 6:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-8">
-        Denver Nuggets vs Sacramento Kings
-       </a>
-      </td>
-      <td>
-       November 11, 2025 8:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 12, 2025 8:00 PM:00" data-start="November 11, 2025 8:00 PM:00">
-       </span>
-      </td>
-     </tr>
-    </tbody>
-   </table>
-<footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-<ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-<li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
-</ul>
-<p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
-</footer>
-<script src="js/bootstrap.bundle.min.js"></script>
-<script>
-        function startCountdown() {
+      </li>
+     </ul>
+     <p class="mb-0 text-body-secondary text-center text-lg-start">
+      Roxiestreams © 2024
+     </p>
+    </footer>
+    <script src="js/bootstrap.bundle.min.js">
+    </script>
+    <script>
+     function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -259,5 +266,195 @@
 
         window.onload = startCountdown;
     </script>
-</body>
+   </div>
+   <h2>
+    NBA Schedule for November 12, 2025
+   </h2>
+   <table id="eventsTable">
+    <thead>
+     <tr>
+      <th>
+       Event
+      </th>
+      <th>
+       Start Time
+      </th>
+      <th>
+       Countdown
+      </th>
+     </tr>
+    </thead>
+    <tbody>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-1">
+        Milwaukee Bucks vs Charlotte Hornets
+       </a>
+      </td>
+      <td>
+       November 12, 2025 4:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 13, 2025 4:00 PM:00" data-start="November 12, 2025 4:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-2">
+        Chicago Bulls vs Detroit Pistons
+       </a>
+      </td>
+      <td>
+       November 12, 2025 4:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 13, 2025 4:00 PM:00" data-start="November 12, 2025 4:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-3">
+        Orlando Magic vs New York Knicks
+       </a>
+      </td>
+      <td>
+       November 12, 2025 4:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 13, 2025 4:00 PM:00" data-start="November 12, 2025 4:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-4">
+        Memphis Grizzlies vs Boston Celtics
+       </a>
+      </td>
+      <td>
+       November 12, 2025 4:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 13, 2025 4:30 PM:00" data-start="November 12, 2025 4:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-5">
+        Cleveland Cavaliers vs Miami Heat
+       </a>
+      </td>
+      <td>
+       November 12, 2025 4:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 13, 2025 4:30 PM:00" data-start="November 12, 2025 4:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-6">
+        Washington Wizards vs Houston Rockets
+       </a>
+      </td>
+      <td>
+       November 12, 2025 5:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 13, 2025 5:00 PM:00" data-start="November 12, 2025 5:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-7">
+        Portland Trail Blazers vs New Orleans Pelicans
+       </a>
+      </td>
+      <td>
+       November 12, 2025 5:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 13, 2025 5:00 PM:00" data-start="November 12, 2025 5:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-8">
+        Golden State Warriors vs San Antonio Spurs
+       </a>
+      </td>
+      <td>
+       November 12, 2025 5:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 13, 2025 5:00 PM:00" data-start="November 12, 2025 5:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-9">
+        Phoenix Suns vs Dallas Mavericks
+       </a>
+      </td>
+      <td>
+       November 12, 2025 5:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 13, 2025 5:30 PM:00" data-start="November 12, 2025 5:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-10">
+        Los Angeles Lakers vs Oklahoma City Thunder
+       </a>
+      </td>
+      <td>
+       November 12, 2025 6:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 13, 2025 6:30 PM:00" data-start="November 12, 2025 6:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-11">
+        Atlanta Hawks vs Sacramento Kings
+       </a>
+      </td>
+      <td>
+       November 12, 2025 7:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 13, 2025 7:00 PM:00" data-start="November 12, 2025 7:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-12">
+        Denver Nuggets vs Los Angeles Clippers
+       </a>
+      </td>
+      <td>
+       November 12, 2025 7:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 13, 2025 7:30 PM:00" data-start="November 12, 2025 7:30 PM:00">
+       </span>
+      </td>
+     </tr>
+    </tbody>
+   </table>
+  </div>
+ </body>
 </html>
