--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
             <tbody>
                 <tr>
                     <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-                    <td>November 11, 2025 16:30 PM</td>
-                    <td><span class="countdown-timer" data-start="November 11, 2025 16:30:00 PST"></span></td>
+                    <td>November 12, 2025 16:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 12, 2025 16:30:00 PST"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
-                    <td>November 11, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 11, 2025 17:00:00 PST"></span></td>
+                    <td><a href="https://roxiestreams.live/aew">AEW</a></td>
+                    <td>November 12, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 12, 2025 17:00:00 PST"></span></td>
                 </tr>
                 <tr>
             </tbody>
