--- a/soccer.html
+++ b/soccer.html
@@ -95,12 +95,52 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Russia vs Peru</a>
-<td>November 12, 2025 09:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Armenia vs Hungary</a>
+<td>November 13, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="November 13, 2025 08:00:00" data-start="November 12, 2025 09:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Atlético Mineiro vs Fortaleza</a>
-<td>November 12, 2025 15:30 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-10">North Macedonia vs Lativa</a>
+<td>November 13, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="November 13, 2025 08:00:00" data-start="November 12, 2025 09:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Norway vs Estonia</a>
+<td>November 13, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="November 13, 2025 14:30:00" data-start="November 12, 2025 15:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Azerbaijan vs Iceland</a>
+<td>November 13, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="November 13, 2025 14:30:00" data-start="November 12, 2025 15:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Ireland vs Portugal</a>
+<td>November 13, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 13, 2025 14:30:00" data-start="November 12, 2025 15:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">England vs Serbia</a>
+<td>November 13, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 13, 2025 14:30:00" data-start="November 12, 2025 15:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">France vs Ukraine</a>
+<td>November 13, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 13, 2025 14:30:00" data-start="November 12, 2025 15:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">France vs Ukraine</a>
+<td>November 13, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 13, 2025 14:30:00" data-start="November 12, 2025 15:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Moldova vs Italy</a>
+<td>November 13, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 13, 2025 14:30:00" data-start="November 12, 2025 15:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Suriname vs El Salvador</a>
+<td>November 13, 2025 14:00 PM</td>
+<td><span class="countdown-timer" data-end="November 13, 2025 14:30:00" data-start="November 12, 2025 15:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Canada vs Ecuador</a>
+<td>November 13, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="November 13, 2025 14:30:00" data-start="November 12, 2025 15:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Haiti vs Costa Rica</a>
+<td>November 13, 2025 18:00 PM</td>
 <td><span class="countdown-timer" data-end="November 13, 2025 14:30:00" data-start="November 12, 2025 15:30:00"></span></td>
 <tr>
 </tr></td></tr></td></tr></tbody></table>
