--- a/nba.html
+++ b/nba.html
@@ -136,175 +136,175 @@
      </thead>
      <tbody>
       <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-1">
-        Milwaukee Bucks vs Charlotte Hornets
-       </a>
-      </td>
-      <td>
-       November 12, 2025 4:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 13, 2025 4:00 PM:00" data-start="November 12, 2025 4:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-2">
-        Chicago Bulls vs Detroit Pistons
-       </a>
-      </td>
-      <td>
-       November 12, 2025 4:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 13, 2025 4:00 PM:00" data-start="November 12, 2025 4:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-3">
-        Orlando Magic vs New York Knicks
-       </a>
-      </td>
-      <td>
-       November 12, 2025 4:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 13, 2025 4:00 PM:00" data-start="November 12, 2025 4:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-4">
-        Memphis Grizzlies vs Boston Celtics
-       </a>
-      </td>
-      <td>
-       November 12, 2025 4:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 13, 2025 4:30 PM:00" data-start="November 12, 2025 4:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-5">
-        Cleveland Cavaliers vs Miami Heat
-       </a>
-      </td>
-      <td>
-       November 12, 2025 4:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 13, 2025 4:30 PM:00" data-start="November 12, 2025 4:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-6">
-        Washington Wizards vs Houston Rockets
-       </a>
-      </td>
-      <td>
-       November 12, 2025 5:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 13, 2025 5:00 PM:00" data-start="November 12, 2025 5:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-7">
-        Portland Trail Blazers vs New Orleans Pelicans
-       </a>
-      </td>
-      <td>
-       November 12, 2025 5:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 13, 2025 5:00 PM:00" data-start="November 12, 2025 5:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-8">
-        Golden State Warriors vs San Antonio Spurs
-       </a>
-      </td>
-      <td>
-       November 12, 2025 5:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 13, 2025 5:00 PM:00" data-start="November 12, 2025 5:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-9">
-        Phoenix Suns vs Dallas Mavericks
-       </a>
-      </td>
-      <td>
-       November 12, 2025 5:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 13, 2025 5:30 PM:00" data-start="November 12, 2025 5:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-10">
-        Los Angeles Lakers vs Oklahoma City Thunder
-       </a>
-      </td>
-      <td>
-       November 12, 2025 6:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 13, 2025 6:30 PM:00" data-start="November 12, 2025 6:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-11">
-        Atlanta Hawks vs Sacramento Kings
-       </a>
-      </td>
-      <td>
-       November 12, 2025 7:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 13, 2025 7:00 PM:00" data-start="November 12, 2025 7:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-12">
-        Denver Nuggets vs Los Angeles Clippers
-       </a>
-      </td>
-      <td>
-       November 12, 2025 7:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 13, 2025 7:30 PM:00" data-start="November 12, 2025 7:30 PM:00">
-       </span>
-      </td>
-     </tr>
-    </tbody>
-   </table>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Milwaukee Bucks vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        November 12, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 13, 2025 4:00 PM:00" data-start="November 12, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Chicago Bulls vs Detroit Pistons
+        </a>
+       </td>
+       <td>
+        November 12, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 13, 2025 4:00 PM:00" data-start="November 12, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Orlando Magic vs New York Knicks
+        </a>
+       </td>
+       <td>
+        November 12, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 13, 2025 4:00 PM:00" data-start="November 12, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Memphis Grizzlies vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        November 12, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 13, 2025 4:30 PM:00" data-start="November 12, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Cleveland Cavaliers vs Miami Heat
+        </a>
+       </td>
+       <td>
+        November 12, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 13, 2025 4:30 PM:00" data-start="November 12, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Washington Wizards vs Houston Rockets
+        </a>
+       </td>
+       <td>
+        November 12, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 13, 2025 5:00 PM:00" data-start="November 12, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Portland Trail Blazers vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        November 12, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 13, 2025 5:00 PM:00" data-start="November 12, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Golden State Warriors vs San Antonio Spurs
+        </a>
+       </td>
+       <td>
+        November 12, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 13, 2025 5:00 PM:00" data-start="November 12, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Phoenix Suns vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        November 12, 2025 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 13, 2025 5:30 PM:00" data-start="November 12, 2025 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-10">
+         Los Angeles Lakers vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        November 12, 2025 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 13, 2025 6:30 PM:00" data-start="November 12, 2025 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-11">
+         Atlanta Hawks vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        November 12, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 13, 2025 7:00 PM:00" data-start="November 12, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-12">
+         Denver Nuggets vs Los Angeles Clippers
+        </a>
+       </td>
+       <td>
+        November 12, 2025 7:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 13, 2025 7:30 PM:00" data-start="November 12, 2025 7:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
@@ -350,6 +350,69 @@
 
         window.onload = startCountdown;
     </script>
+   </div>
+   <h2>
+    NBA Schedule for November 13, 2025
+   </h2>
+   <table id="eventsTable">
+    <thead>
+     <tr>
+      <th>
+       Event
+      </th>
+      <th>
+       Start Time
+      </th>
+      <th>
+       Countdown
+      </th>
+     </tr>
+    </thead>
+    <tbody>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-1">
+        Toronto Raptors vs Cleveland Cavaliers
+       </a>
+      </td>
+      <td>
+       November 13, 2025 4:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 14, 2025 4:00 PM:00" data-start="November 13, 2025 4:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-2">
+        Indiana Pacers vs Phoenix Suns
+       </a>
+      </td>
+      <td>
+       November 13, 2025 6:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 14, 2025 6:00 PM:00" data-start="November 13, 2025 6:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-3">
+        Atlanta Hawks vs Utah Jazz
+       </a>
+      </td>
+      <td>
+       November 13, 2025 6:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 14, 2025 6:00 PM:00" data-start="November 13, 2025 6:00 PM:00">
+       </span>
+      </td>
+     </tr>
+    </tbody>
+   </table>
   </div>
  </body>
 </html>
