--- a/nfl.html
+++ b/nfl.html
@@ -138,14 +138,14 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nfl-streams-1">
-         Philadelphia Eagles vs Green Bay Packers
+         New York Jets vs New England Patriots
         </a>
        </td>
        <td>
-        November 10, 2025 17:00 PM
+        November 13, 2025 17:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 30, 2025 6:30 AM:00" data-start="November 10, 2025 5:00 PM:00">
+        <span class="countdown-timer" data-end="November 30, 2025 6:30 AM:00" data-start="November 13, 2025 5:00 PM:00">
         </span>
        </td>
       </tr>
